--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="background"></div>
     <div class="overlay"></div>
     <div class="content">
-        <h1>There comes a moment when you stop running...</h1>
-        <p>...and start auditing who you’ve become.</p>
+        <h1>There comes a moment when you stop...</h1>
+        <p>...and start measuring life..</p>
         <div class="buttons">
-            <a href="#subscribe">Enter The Audit</a>
+            <a href="#subscribe">The Audit</a>
         </div>
     </div>
     <audio id="audio" src="assets/soundtrack.m4a" autoplay loop></audio>
